# mgm-hackathon

./: .env.example  .gitignore  README.md  User_models.py  agent.py  app.py  gradio-example.py  output.md  public transport_models.py  pyproject.toml  shop_models.py  test.ipynb  test_easyocr.py  test_no_ocr.py  test_paddle_ocr.py
src/mgm_hackathon/: __init__.py  _cerebras.py  _lang.py  _openrouter.py  agent.py  gradio_ui.py  main.py  refiner.py  util.py
src/mgm_hackathon/chat_models/: __init__.py  _cerebras.py  _multi.py  _openrouter.py
src/mgm_hackathon/schemas/: __init__.py  _types.py  flights_models.py  hotel_models.py  public_transport_models.py  repr_builder.py  restaurant_models.py  shop_models.py
tests/: test_agent.py  test_util.py
