[project]
name = "mgm-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "dotenv>=0.9.9",
  "gradio>=5.49.1",
  "langchain>=1.0.2",
  "langchain-openai>=1.0.1",
  "langgraph>=1.0.1",
  "nest-asyncio>=1.6.0",
]

[project.scripts]
mgm-hackathon = "mgm_hackathon:main"

[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"
