[project]
name = "mgm-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "anyio>=4.11.0",
  "dotenv>=0.9.9",
  "gradio>=5.49.1",
  "langchain>=1.0.2",
  "langchain-anthropic>=1.0.0",
  "langchain-google-genai>=3.0.0",
  "langchain-openai>=1.0.1",
  "langgraph>=1.0.1",
  "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.23.8",
]

[project.scripts]
mgm-hackathon = "mgm_hackathon:main"

[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"
